--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
   <properties>
     <!-- plugin properties -->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <jdk.version>1.7</jdk.version>
     <junit.version>4.12</junit.version>
     <mysql.version>5.1.34</mysql.version>
